@@ -32,6 +32,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Iterator
 import|;
 end_import
@@ -412,7 +422,7 @@ name|isMapTask
 argument_list|()
 argument_list|)
 operator|+
-literal|",CLA"
+literal|",console"
 argument_list|)
 expr_stmt|;
 comment|// TODO: The following is useful for instance in streaming tasks. Should be
@@ -448,90 +458,6 @@ operator|+
 literal|" "
 expr_stmt|;
 block|}
-comment|// FIXME: don't think this is also needed given we already set java
-comment|// properties.
-name|long
-name|logSize
-init|=
-name|TaskLog
-operator|.
-name|getTaskLogLength
-argument_list|(
-name|conf
-argument_list|)
-decl_stmt|;
-name|Vector
-argument_list|<
-name|String
-argument_list|>
-name|logProps
-init|=
-operator|new
-name|Vector
-argument_list|<
-name|String
-argument_list|>
-argument_list|(
-literal|4
-argument_list|)
-decl_stmt|;
-name|setupLog4jProperties
-argument_list|(
-name|task
-argument_list|,
-name|logProps
-argument_list|,
-name|logSize
-argument_list|)
-expr_stmt|;
-name|Iterator
-argument_list|<
-name|String
-argument_list|>
-name|it
-init|=
-name|logProps
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-name|StringBuffer
-name|buffer
-init|=
-operator|new
-name|StringBuffer
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-name|it
-operator|.
-name|hasNext
-argument_list|()
-condition|)
-block|{
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|" "
-operator|+
-name|it
-operator|.
-name|next
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-name|hadoopClientOpts
-operator|=
-name|hadoopClientOpts
-operator|+
-name|buffer
-operator|.
-name|toString
-argument_list|()
-expr_stmt|;
 name|environment
 operator|.
 name|put
@@ -541,6 +467,81 @@ argument_list|,
 name|hadoopClientOpts
 argument_list|)
 expr_stmt|;
+comment|// setEnvFromInputString above will add env variable values from
+comment|// mapredChildEnv to existing variables. We want to overwrite
+comment|// HADOOP_ROOT_LOGGER and HADOOP_CLIENT_OPTS if the user set it explicitly.
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|tmpEnv
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|MRApps
+operator|.
+name|setEnvFromInputString
+argument_list|(
+name|tmpEnv
+argument_list|,
+name|mapredChildEnv
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|keys
+init|=
+block|{
+literal|"HADOOP_ROOT_LOGGER"
+block|,
+literal|"HADOOP_CLIENT_OPTS"
+block|}
+decl_stmt|;
+for|for
+control|(
+name|String
+name|key
+range|:
+name|keys
+control|)
+block|{
+if|if
+condition|(
+name|tmpEnv
+operator|.
+name|containsKey
+argument_list|(
+name|key
+argument_list|)
+condition|)
+block|{
+name|environment
+operator|.
+name|put
+argument_list|(
+name|key
+argument_list|,
+name|tmpEnv
+operator|.
+name|get
+argument_list|(
+name|key
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|// Add stdout/stderr env
 name|environment
 operator|.
