@@ -26,6 +26,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|junit
 operator|.
 name|framework
@@ -73,6 +83,20 @@ operator|.
 name|conf
 operator|.
 name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|JobConf
 import|;
 end_import
 
@@ -445,6 +469,70 @@ operator|.
 name|myCommandLine
 argument_list|)
 expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER not set for job"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|containsKey
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"INFO,console"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|get
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"HADOOP_CLIENT_OPTS not set for job"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|containsKey
+argument_list|(
+literal|"HADOOP_CLIENT_OPTS"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|""
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|get
+argument_list|(
+literal|"HADOOP_CLIENT_OPTS"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 DECL|class|MyMRApp
 specifier|private
@@ -459,6 +547,16 @@ DECL|field|myCommandLine
 specifier|private
 name|String
 name|myCommandLine
+decl_stmt|;
+DECL|field|cmdEnvironment
+specifier|private
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|cmdEnvironment
 decl_stmt|;
 DECL|method|MyMRApp (int maps, int reduces, boolean autoComplete, String testName, boolean cleanOnStart)
 specifier|public
@@ -572,6 +670,13 @@ name|myCommandLine
 operator|=
 name|cmdString
 expr_stmt|;
+name|cmdEnvironment
+operator|=
+name|launchContext
+operator|.
+name|getEnvironment
+argument_list|()
+expr_stmt|;
 block|}
 name|super
 operator|.
@@ -584,6 +689,267 @@ block|}
 block|}
 return|;
 block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testEnvironmentVariables ()
+specifier|public
+name|void
+name|testEnvironmentVariables
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MyMRApp
+name|app
+init|=
+operator|new
+name|MyMRApp
+argument_list|(
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|true
+argument_list|,
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|JobConf
+operator|.
+name|MAPRED_MAP_TASK_ENV
+argument_list|,
+literal|"HADOOP_CLIENT_OPTS=test"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setStrings
+argument_list|(
+name|MRJobConfig
+operator|.
+name|MAP_LOG_LEVEL
+argument_list|,
+literal|"WARN"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|MRConfig
+operator|.
+name|MAPREDUCE_APP_SUBMISSION_CROSS_PLATFORM
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|Job
+name|job
+init|=
+name|app
+operator|.
+name|submit
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|job
+argument_list|,
+name|JobState
+operator|.
+name|SUCCEEDED
+argument_list|)
+expr_stmt|;
+name|app
+operator|.
+name|verifyCompleted
+argument_list|()
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER not set for job"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|containsKey
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"WARN,console"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|get
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"HADOOP_CLIENT_OPTS not set for job"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|containsKey
+argument_list|(
+literal|"HADOOP_CLIENT_OPTS"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"test"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|get
+argument_list|(
+literal|"HADOOP_CLIENT_OPTS"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Try one more.
+name|app
+operator|=
+operator|new
+name|MyMRApp
+argument_list|(
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|true
+argument_list|,
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|=
+operator|new
+name|Configuration
+argument_list|()
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|JobConf
+operator|.
+name|MAPRED_MAP_TASK_ENV
+argument_list|,
+literal|"HADOOP_ROOT_LOGGER=trace"
+argument_list|)
+expr_stmt|;
+name|job
+operator|=
+name|app
+operator|.
+name|submit
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|job
+argument_list|,
+name|JobState
+operator|.
+name|SUCCEEDED
+argument_list|)
+expr_stmt|;
+name|app
+operator|.
+name|verifyCompleted
+argument_list|()
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER not set for job"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|containsKey
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"trace"
+argument_list|,
+name|app
+operator|.
+name|cmdEnvironment
+operator|.
+name|get
+argument_list|(
+literal|"HADOOP_ROOT_LOGGER"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
